--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ pyautogui>=0.9.54
 # Data Validation
 pydantic>=2.0.0
 
+# Configuration
+python-dotenv>=1.0.0
+pyyaml>=6.0
+
 # Testing
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
